--- a/index.html
+++ b/index.html
@@ -13,11 +13,32 @@
 	<body>
 		<div class="slider-wrapper">
 			<ul class="slider__list list-style">
-				<li class="slider__item">
+				<li data-id="1" class="slider__item js-slider">
 					<div class="img-overlay">
 						<img
 							class="slider__img"
 							src="./img/japan-2014618_1920.jpg"
+							alt=""
+							width="1300"
+						/>
+					</div>
+
+					<div class="wrapper-text js-text-anim">
+						<p class="slider__img-text">
+							Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+						</p>
+
+						<p class="slider_img-alt">
+							Lorem, ipsum dolor.
+						</p>
+					</div>
+				</li>
+
+				<li data-id="2" class="slider__item js-slider display-none">
+					<div class="img-overlay">
+						<img
+							class="slider__img"
+							src="./img/japan-2014619_1920.jpg"
 							alt=""
 							width="1300"
 						/>
@@ -34,87 +55,75 @@
 					</div>
 				</li>
 
-				<li class="slider__item">
+				<li data-id="3" class="slider__item js-slider display-none">
 					<div class="img-overlay">
 						<img
-							class="slider__img display-none"
-							src="./img/japan-2014619_1920.jpg"
-							alt=""
-							width="1300"
-						/>
-					</div>
-
-					<p class="slider__img-text display-none">
-						Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-					</p>
-
-					<p class="slider_img-alt display-none">
-						Lorem, ipsum dolor.
-					</p>
-				</li>
-
-				<li class="slider__item">
-					<div class="img-overlay">
-						<img
-							class="slider__img display-none"
+							class="slider__img"
 							src="./img/neon-4806610_1920.jpg"
 							alt=""
 							width="1300"
 						/>
 					</div>
 
-					<p class="slider__img-text display-none">
-						Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-					</p>
+					<div class="wrapper-text">
+						<p class="slider__img-text">
+							Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+						</p>
 
-					<p class="slider_img-alt display-none">
-						Lorem, ipsum dolor.
-					</p>
+						<p class="slider_img-alt">
+							Lorem, ipsum dolor.
+						</p>
+					</div>
 				</li>
 
-				<li class="slider__item">
+				<li data-id="4" class="slider__item js-slider display-none">
 					<div class="img-overlay">
 						<img
-							class="slider__img display-none"
+							class="slider__img"
 							src="./img/tokyo-4763976_1920.jpg"
 							alt=""
 							width="1300"
 						/>
 					</div>
 
-					<p class="slider__img-text display-none">
-						Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-					</p>
+					<div class="wrapper-text">
+						<p class="slider__img-text">
+							Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+						</p>
 
-					<p class="slider_img-alt display-none">
-						Lorem, ipsum dolor.
-					</p>
+						<p class="slider_img-alt">
+							Lorem, ipsum dolor.
+						</p>
+					</div>
 				</li>
 
-				<li class="slider__item">
+				<li data-id="5" class="slider__item js-slider display-none">
 					<div class="img-overlay">
 						<img
-							class="slider__img display-none"
+							class="slider__img"
 							src="./img/tokyo-4807294_1920.jpg"
 							alt=""
 							width="1300"
 						/>
 					</div>
 
-					<p class="slider__img-text display-none">
-						Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-					</p>
+					<div class="wrapper-text">
+						<p class="slider__img-text">
+							Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+						</p>
 
-					<p class="slider_img-alt display-none">
-						Lorem, ipsum dolor.
-					</p>
+						<p class="slider_img-alt">
+							Lorem, ipsum dolor.
+						</p>
+					</div>
 				</li>
 			</ul>
 
-			<div class="slider__btn-wrapper">
-				<button class="slider__btn btn--left">Previous</button>
-				<button class="slider__btn btn--right">Next</button>
+			<div class="slider__btn-wrapper js-btn-event">
+				<button class="slider__btn btn--left"></button>
+				<button class="slider__btn btn--right"></button>
 			</div>
 		</div>
+		<script src="./index.js"></script>
 	</body>
 </html>
