сделал базу для слайдера

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						/>
 					</div>
 
-					<div class="wrapper-text js-text-anim">
+					<div class="wrapper-text">
 						<p class="slider__img-text">
 							Lorem ipsum, dolor sit amet consectetur adipisicing elit.
 						</p>
